[package]
name = "btc_tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
error-chain = "0.12.4"
reqwest = { version = "0.12.9", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.41.1", features = ["full"] }
